--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -134,3 +134,7 @@ solicitante.tipoSolicitante=Tipo Solicitante
 contato.nome-existente = "Nome do contato j\u00E1 existe para essa companhia a\u00E9rea"
 contato.telefone-existente = "Telefone do contato j\u00E1 existe para essa companhia a\u00E9rea" 
 contato.email-existente = "Email do contato j\u00E1 existe para essa companhia a\u00E9rea"
+
+
+
+error-tipo-arquivo-anexo = Tipo de anexo não suportado.
