Criação do CRUD de aliquota diferenciada

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -132,9 +132,12 @@ solicitante.cpf=CPF
 solicitante.tipoSolicitante=Tipo Solicitante
 
 contato.nome-existente = "Nome do contato j\u00E1 existe para essa companhia a\u00E9rea"
-contato.telefone-existente = "Telefone do contato j\u00E1 existe para essa companhia a\u00E9rea" 
+contato.telefone-existente = "Telefone do contato j\u00E1 existe para essa companhia a\u00E9rea"
 contato.email-existente = "Email do contato j\u00E1 existe para essa companhia a\u00E9rea"
 
 
 
 error-tipo-arquivo-anexo = Tipo de anexo não suportado.
+
+tabelaaliquotadiferenciada.ncm = NCM
+tabelaaliquotadiferenciada.iniciovigencia = Inicio de Vigência
