Erro ao tentar salvar Aliquota mesno NCM

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -141,3 +141,5 @@ error-tipo-arquivo-anexo = Tipo de anexo não suportado.
 
 tabelaaliquotadiferenciada.ncm = NCM
 tabelaaliquotadiferenciada.iniciovigencia = Inicio de Vigência
+
+ncm-error.duplicado = Número de NCM já cadastrado.
