Estrutura de Controller e Teste para cliente

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -50,96 +50,5 @@ exemplo.validation.descricaoInvalida=Descri\u00E7\u00E3o \u00E9 inv\u00E1lida {0
 
 exemploRelacao.nome=Nome
 
-tipolocalidade.descricao=Descri\u00E7\u00E3o
-tipolocalidade.descricao-existente=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. A Descri\u00E7\u00E3o \"{0}\" j\u00E1 existe.
-
-valordiaria.valor=Valor
-valordiaria.tipoLocalidade=Tipo de Localidade
-valordiaria.normativo=Normativo
-valordiaria.dataNormativo=Data do Normativo
-valordiaria.cargos=Cargo/Fun\u00E7\u00E3o
-valordiaria.normativo-existente=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. O Normativo \"{0}\" j\u00E1 existe.
-valordiaria.cargos-null=\u00C9 necess\u00E1rio selecionar pelo menos uma op\u00E7\u00E3o de Cargo Efetivo.
-
-tipoevento.descricao=Descri\u00E7\u00E3o
-tipoevento.descricao-existente=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. A Descri\u00E7\u00E3o "\{0}"\ j\u00E1 existe.
-
-auxilioalimentacao.dias=Dias
-auxilioalimentacao.orgao=\u00D3rg\u00E3o
-
-evento.nomeevento=Evento
-evento.tipoevento=Tipo de Evento
-evento.descricao=Descri\u00E7\u00E3o
-evento.unidade=Unidade
-evento.datainicio=Data de In\u00EDcio
-evento.datatermino=Data de T\u00E9rmino
-evento.numerodocumento=N\u00FAmero do Documento
-evento.numeroprocesso=N\u00FAmero do Processo
-evento.organizadora=Organizadora
-evento.condicoes=Condi\u00E7\u00F5es
-evento.permitediasmanutencao=Permite Dias Manuten\u00E7\u00E3o
-evento.nomeevento-existente=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. O Evento "\{0}"\ j\u00E1 existe.
-evento.error.datas=N\u00E3o \u00E9 poss\u00EDvel cadastrar um Evento com uma Data de In\u00EDcio posterior a uma Data de T\u00E9rmino.
-evento.error.condicaosituacao=N\u00E3o \u00E9 poss\u00EDvel {0} um evento que n\u00E3o esteja em aberto.
-
-localdificilacesso.localidade=Localidade
-localdificilacesso.nome=Nome
-localdificilacesso.distancia=Dist\u00E2ncia
-localdificilacesso.tempo=Tempo
-localdificilacesso.condicoes=Condi\u00E7\u00F5es
-localdificilacesso.resolucao=Resolu\u00E7\u00E3o
-localdificilacesso.nome-existente=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. O Nome \"{0}\" j\u00E1 existe.
-localdificilacesso.tempo-longo=N\u00E3o \u00E9 poss\u00EDvel efetivar a a\u00E7\u00E3o. O Campo Tempo deve ser no m\u00E1ximo 1000.
-
-precocombustivel.dataNormativo=Data Normativo
-precocombustivel.precoGasolina=Pre\u00E7o Gasolina
-precocombustivel.precoEtanol=Pre\u00E7o Etanol
-precocombustivel.precoDiesel=Pre\u00E7o Diesel
-precocombustivel.precoGNV=Pre\u00E7o GNV
-
-indenizacaotransporte.vigenciaInicial=Vig\u00EAncia Inicial
-indenizacaotransporte.vigenciaFinal=Vig\u00EAncia Final
-indenizacaotransporte.consumoPadrao=Consumo Padr\u00E3o
-indenizacaotransporte.politicaValorTransporte=Pol\u00EDtica Valor Transporte
-indenizacaotransporte.combustivelPadrao=Combust\u00EDvel Padr\u00E3o
-indenizacaotransporte.vigenciasobreposta=N\u00E3o \u00E9 poss\u00EDvel inserir uma vig\u00EAncia no mesmo per\u00EDodo de outra.
-indenizacaotransporte.vigenciasobrepostaativa=N\u00E3o \u00E9 poss\u00EDvel ativar uma vig\u00EAncia no mesmo per\u00EDodo de outra.
-
-distancialocalidade.id=id
-distancialocalidade.ufOrigem=UF Origem
-distancialocalidade.ufDestino=UF Destino
-distancialocalidade.localidadeOrigem=Localidade Origem
-distancialocalidade.localidadeDestino=Localidade Destino
-distancialocalidade.distancia=Dist\u00E2ncia
-distancialocalidade.distancia-existente=N\u00E3o \u00E9 poss\u00EDvel ter mais de uma dist\u00E2ncia ativa entre as mesmas localidades.
-distancialocalidade.distancia-zerada=N\u00E3o \u00E9 poss\u00EDvel cadastrar uma dist\u00E2ncia menor ou igual a zero.
-
-companhiaaerea.id=Id
-companhiaaerea.nome=Nome
-companhiaaerea.sigla=Sigla
-companhiaaerea.nome-existente=N\u00E3o \u00E9 poss\u00EDvel cadastrar mais de uma Companhia A\u00E9rea com o mesmo nome.
-companhiaaerea.sigla-existente=N\u00E3o \u00E9 poss\u00EDvel cadastrar mais de uma Companhia A\u00E9rea com a mesma sigla.
-companhiaaerea.cnpj-existente=N\u00E3o \u00E9 poss\u00EDvel cadastrar mais de uma Companhia A\u00E9rea com o mesmo CNPJ.
-
-solicitacao.tipoSolicitante=tipoSolicitante
-solicitacao.justificativaSolicitacao=justificativaSolicitacao
-solicitacao.solicitacaoComplementarInexistente=A solicita\u00E7\u00E3o original n\u00E3o existe.
-solicitacao.tipoSolicitacaoInexistente=Tipo de Solicita\u00E7\u00E3o n\u00E3o existe.
-solicitacao.tipo-solicitacao-invalida=N\u00E3o \u00E9 poss\u00EDvel cadastrar uma 'Solicita\u00E7\u00E3o Complementar' para o tipo {0}.
-solicitacao.data-nascimento-invalida=A data de nascimento n\u00E3o pode ser maior que a data atual.
-solicitante.nome=Nome
-solicitante.cpf=CPF
-solicitante.tipoSolicitante=Tipo Solicitante
-
-contato.nome-existente = "Nome do contato j\u00E1 existe para essa companhia a\u00E9rea"
-contato.telefone-existente = "Telefone do contato j\u00E1 existe para essa companhia a\u00E9rea"
-contato.email-existente = "Email do contato j\u00E1 existe para essa companhia a\u00E9rea"
-
-
-
-error-tipo-arquivo-anexo = Tipo de anexo não suportado.
-
-tabelaaliquotadiferenciada.ncm = NCM
-tabelaaliquotadiferenciada.iniciovigencia = Inicio de Vigência
-
-ncm-error.duplicado = Número de NCM já cadastrado.
+cliente.nome=Cliente
+cliente.telefone=Telefone
