Testes para cliente

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -50,5 +50,8 @@ exemplo.validation.descricaoInvalida=Descri\u00E7\u00E3o \u00E9 inv\u00E1lida {0
 
 exemploRelacao.nome=Nome
 
-cliente.nome=Cliente
+cliente.nome=Nome
 cliente.telefone=Telefone
+cliente.email=Email
+cliente.cpf=CPF
+cliente.data-nascimento=Data de Nascimento
