Mensagens de erros nas requests

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -50,9 +50,34 @@ exemplo.validation.descricaoInvalida=Descri\u00E7\u00E3o \u00E9 inv\u00E1lida {0
 
 exemploRelacao.nome=Nome
 
+validation.requiredListMinSize = A lista de {label} deve ter no minimo {min} {alias}
+
 cliente.nome=Nome
 cliente.telefone=Telefone
 cliente.email=Email
 cliente.cpf=CPF
 cliente.data-nascimento=Data de Nascimento
 endereco=Endereço
+
+endereco.logradouro= Logradouro
+endereco.cidade= Cidade
+endereco.cep= CEP
+
+aquisicao.data-aquisicao = Data de Aquisição
+aquisicao.valor-aquisicao = Valor da Aquisição
+aquisicao.valor-desconto = Valor do Desconto
+aquisicao.cliente= Cliente
+aquisicao.procedimento= Procedimento
+aquisicao.pagamento= Pagamento
+
+pagamento.data = Data de Pagamento
+pagamento.valor = Valor total Pagamento
+pagamento.forma = Forma de Pagamento
+pagamento.quantidade-parcelas = Quantidade de Parcelas
+pagamento.taxa = Valor da Taxa
+pagamento.parcela-pagamento= Parcecla do Pagamento
+
+parcela.data-credito= Data do Credito
+parcela.valor-credito = Valor do Credito
+parcela.valor-taxa = Valor da Taxa
+parcela.numero = Número da Parcela
