--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -61,6 +61,7 @@ endereco=Endereço
 
 endereco.logradouro= Logradouro
 endereco.cidade= Cidade
+endereco.bairro= Bairro
 endereco.cep= CEP
 
 aquisicao.data-aquisicao = Data de Aquisição
