--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -82,3 +82,5 @@ parcela.data-credito= Data do Credito
 parcela.valor-credito = Valor do Credito
 parcela.valor-taxa = Valor da Taxa
 parcela.numero = Número da Parcela
+
+valor-aquisicao-inferior-valor-procedimento = O valor da aquisição acrescido do desconto não pode ser menor que o valor do procedimento.
