Testes de aquisições

--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -84,3 +84,5 @@ parcela.valor-taxa = Valor da Taxa
 parcela.numero = Número da Parcela
 
 valor-aquisicao-inferior-valor-procedimento = O valor da aquisição acrescido do desconto não pode ser menor que o valor do procedimento.
+valor-pagamento-inferior-aquisicao = O valor total dos pagamentos não pode ser inferior ao valor da aquisição.
+valor-parcelas-inferior-pagamento = O valor total das parcelas não pode ser inferior ao valor do pagamento, revise o pagamento por {0}.
