--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -86,3 +86,6 @@ parcela.numero = Número da Parcela
 valor-aquisicao-inferior-valor-procedimento = O valor da aquisição acrescido do desconto não pode ser menor que o valor do procedimento.
 valor-pagamento-inferior-aquisicao = O valor total dos pagamentos não pode ser inferior ao valor da aquisição.
 valor-parcelas-inferior-pagamento = O valor total das parcelas não pode ser inferior ao valor do pagamento, revise o pagamento por {0}.
+
+cliente-existente = CPF {0} possui cadastro.
+cliente-cpf-inativo = CPF {0} cadastrado e inativado, deseja ativar?
