--- a/domain/src/main/resources/messages.properties
+++ b/domain/src/main/resources/messages.properties
@@ -94,4 +94,4 @@ procedimento.nome = Nome procedimento
 procedimento.valor = Valor do procedimento
 procedimento.quantidade-sessoes = Quantidade de sessão
 
-quantidade-sessao-invalido-quando-sessao-maior-um = Se quantidade de sessão maior que um, intervalo entre sessões é obrigatório.
+procedimento.error.regioes=
